app-test/testdata/typesystem/neg/algebraic-type-duplicate-field/check/adt.check
Error in "testdata/typesystem/neg/algebraic-type-duplicate-field/src/adt.cal" on line 2:
    type T : (int a, bool a) end // error
                     ^^^^^^
a is already declared in this scope.